# fastapi-crud-db-auth

./: .gitignore  README.md  app.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 081f65d34a16_auto_add_vote_table.py  58f85f500c07_create_posts_table.py  7f9bd5763df8_add_last_few_columns_to_posts_table.py  9a7379919e53_add_foreign_key_to_posts_table.py  bb1612c857d3_add_users_table.py  cb52e16c22db_add_users_phone_number.py  fba52c953dd4_add_new_column.py
app/: __init__.py  database.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  post.py  user.py  vote.py
db_migrations/: env.py
db_migrations/versions/: 5d9a8d73aded_added_password_hash.py  9904805ccf70_add_reviews_table.py  ac884d1afa64_init.py  ad574e5332e5_connect_users_to_books.py  b0ca57e15d72_add_session_table.py  b1dee89072e5_add_roles_to_users.py
fastapi-crud-db-auth/: create_post.yml  create_user.yml  delete_post.yml  get_post.yml  get_posts.yml  get_user.yml  index.yml  login_user.yml  opencollection.yml  update_post.yml  vote.yml
fastapi-crud-db-auth/environments/: dev-env.yml  environment_1.yml  prod-env.yml
fastapi-crud-db-auth/fastapi-crud-db-auth/: add_review.yml  create_book.yml  create_user.yml  delete_book.yml  get_all_books.yml  get_books_by_user_uid.yml  get_current_user.yml  get_session.yml  get_single_book.yml  login.yml  logout.yml  opencollection.yml  refresh_token.yml  update_book.yml
src/: __init__.py  cleanup_tasks.py  config.py  errors.py  middlewares.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  services.py  utils.py
(+30 files in other folders)
